Add a new reason for user data wiping now that hibernate will get confused once more